KOILのリンクを修正

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -36,7 +36,7 @@
 					<div class="detainls">
 						<p>柏の葉</p>
 						<p>毎月第3日曜日</p>
-						<p>@<a href="http://www.31ventures.jp/ventureoffice/31ventures-koil/">KOIL</a></p>
+						<p>@<a href="http://www.31ventures.jp/ventureoffice/koil/">KOIL</a></p>
 					</div>
 				</td>
 			</tr>
