--- a/schedule/index.html
+++ b/schedule/index.html
@@ -115,7 +115,7 @@
 
 		</table>
 
-		<p>※12月は Special Presentation Day を開催します。</p>
+		<p>※12月24日は Special Presentation Day 2016 を  @<a href="http://www.31ventures.jp/ventureoffice/koil/">KOIL</a> にて開催します。</p>
 
 		<p class="caution">スケジュールの変更がある場合は公式SNS等で随時公開していきます。</p>
 
