--- a/event/spd2016/index.html
+++ b/event/spd2016/index.html
@@ -88,82 +88,9 @@
 			<div id="timetable">
 				<p class="title">Time table</p>
 				
-				<table border="3" cellspacing="0" cellpadding="5" bordercolor="#000">
 				
-					<tr>
-						<td class="time">時間</td>
-						<td class="section">イベント</td>
-					</tr>
 
-					<tr>
-						<td>12:40</td>
-						<td>受付開始</td>
-					</tr>
-
-					<tr>
-						<td>13:00</td>
-						<td>オープニング</td>
-					</tr>
-
-					<tr>
-						<td>13:20</td>
-						<td>セッション①：生徒発表Ⅰ</td>
-					</tr>
-
-					<tr>
-						<td>13:45</td>
-						<td>休憩（10分）</td>
-					</tr>
-
-					<tr>
-						<td>13:55</td>
-						<td>セッション②：生徒発表Ⅱ</td>
-					</tr>
-
-					<tr>
-						<td>14:20</td>
-						<td>休憩（10分）</td>
-					</tr>
-
-					<tr>
-						<td>14:30</td>
-						<td>セッション③：全体ワークショップ</td>
-					</tr>
-
-					<tr>
-						<td>15:00</td>
-						<td>セッション④：生徒発表Ⅲ</td>
-					</tr>
-
-					<tr>
-						<td>15:20</td>
-						<td>休憩（10分）</td>
-					</tr>
-
-					<tr>
-						<td>15:30</td>
-						<td>セッション⑤：生徒発表Ⅳ</td>
-					</tr>
-
-					<tr>
-						<td>15:50</td>
-						<td>休憩（10分）</td>
-					</tr>
-
-					<tr>
-						<td>16:00</td>
-						<td>クロージングトーク</td>
-					</tr>
-
-					<tr>
-						<td>16:40</td>
-						<td>クロージング</td>
-					</tr>
-
-				</table>
-
-				<p class="small">※当日に若干の変更があることがございます。予めご了承ください。
-				</p>
+				<p class="text">Coming soon...</p>
 
 			</div>
 
