2017年度版のスケジュールに更新 PDF版でもダウンロード可能にした。

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -9,7 +9,7 @@
 
 	<div id="header">
 
-		<p class="header">CoderDojo Kashiwa 2016年度版 スケジュール</p>
+		<p class="header">CoderDojo Kashiwa 2017年度版 スケジュール</p>
 
 	</div>
 
@@ -43,88 +43,90 @@
 
 			<tr>
 				<td>1月</td>
-				<td>10日・24日</td>
-				<td>17日</td>
-			</tr>
-
-			<tr>
-				<td>2月</td>
-				<td>14日・28日</td>
-				<td>21日</td>
-			</tr>
-
-			<tr>
-				<td>3月</td>
-				<td>13日・27日</td>
-				<td>20日</td>
-			</tr>
-
-			<tr>
-				<td>4月</td>
-				<td>10日・24日</td>
-				<td>17日</td>
-			</tr>
-
-			<tr>
-				<td>5月</td>
 				<td>8日・22日</td>
 				<td>15日</td>
 			</tr>
 
 			<tr>
-				<td>6月</td>
+				<td>2月</td>
 				<td>12日・26日</td>
 				<td>19日</td>
 			</tr>
 
 			<tr>
-				<td>7月</td>
-				<td>10日・24日</td>
-				<td>17日</td>
+				<td>3月</td>
+				<td>12日・26日</td>
+				<td>19日</td>
 			</tr>
 
 			<tr>
-				<td>8月</td>
-				<td>14日・28日</td>
-				<td>21日</td>
-			</tr>
-
-			<tr>
-				<td>9月</td>
-				<td>11日・25日</td>
-				<td>18日</td>
-			</tr>
-
-			<tr>
-				<td>10月</td>
+				<td>4月</td>
 				<td>9日・23日</td>
 				<td>16日</td>
 			</tr>
 
 			<tr>
-				<td>11月</td>
+				<td>5月</td>
+				<td>14日・28日</td>
+				<td>21日</td>
+			</tr>
+
+			<tr>
+				<td>6月</td>
+				<td>11日・25日</td>
+				<td>18日</td>
+			</tr>
+
+			<tr>
+				<td>7月</td>
+				<td>9日・23日</td>
+				<td>16日</td>
+			</tr>
+
+			<tr>
+				<td>8月</td>
 				<td>13日・27日</td>
 				<td>20日</td>
 			</tr>
 
 			<tr>
+				<td>9月</td>
+				<td>10日・24日</td>
+				<td>17日</td>
+			</tr>
+
+			<tr>
+				<td>10月</td>
+				<td>8日・22日</td>
+				<td>15日</td>
+			</tr>
+
+			<tr>
+				<td>11月</td>
+				<td>12日・26日</td>
+				<td>19日</td>
+			</tr>
+
+			<tr>
 				<td>12月</td>
-				<td>11日</td>
-				<td>18日</td>
+				<td>10日</td>
+				<td>17日</td>
 			</tr>
 
 		</table>
 
-		<p>※12月24日は Special Presentation Day 2016 を  @<a href="http://www.31ventures.jp/ventureoffice/koil/">KOIL</a> にて開催します。</p>
+		<p>※12月24日は Special Presentation Day を開催します。</p>
 
 		<p class="caution">スケジュールの変更がある場合は公式SNS等で随時公開していきます。</p>
+
+		<p>PDF版を<a href="pdf/CoderDojoKashiwa 2017年度スケジュール.pdf" target="_blank">ダウンロード</a>する</p>
 
 	</div>
 
 	<div id="footer">
 		<hr>
 		<p class="footerText">
-			Copyright©2016 CoderDojo Kashiwa.
+			Copyright©2017 CoderDojo Kashiwa.
 		</p>
 	</div>
 
