名称を変えた。

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -119,7 +119,7 @@
 
 		<p class="caution">スケジュールの変更がある場合は公式SNS等で随時公開していきます。</p>
 
-		<p>PDF版を<a href="pdf/CoderDojoKashiwa 2017年度スケジュール.pdf" target="_blank">ダウンロード</a>する</p>
+		<p>PDF版を<a href="pdf/CoderDojoKashiwa_2017schedule.pdf" target="_blank">ダウンロード</a>する</p>
 
 	</div>
 
